[tool.poetry]
name = "mongoie"
version = "0.1.0"
description = "Simple tool to export and import data from/to mongodb"
authors = ["jakubpluta <plutakuba@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.5.0"
click = "^8.1.7"
pandas = "^2.1.0"
fastparquet = "^2023.8.0"
ijson = "^3.2.3"
pyarrow = "12.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.1"
pytest-cov = "^4.1.0"
pylint = "^2.17.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]